name:                react-flux-router
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/react-flux-router#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     React.Flux.Router.WebRoutes
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , ghcjs-router
                     , react-flux
                     , text
                     , transformers
                     , web-routes
  if impl(ghcjs)
    build-depends:     ghcjs-base
  ghc-options:         -Wall
  default-language:    Haskell2010

executable react-flux-router-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , react-flux-router
  default-language:    Haskell2010

test-suite react-flux-router-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , react-flux-router
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/react-flux-router
